--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
     <main style="padding: 0px 10px;">
         <header class="d-flex space-between middle-align">
            <a href="/">
-            <img src="images/logo.png" height="50px" width="170px" alt="site logo main" style="margin: auto;"></img>
+            <img src="images/logo.PNG" height="50px" width="170px" alt="site logo main" style="margin: auto;"></img>
         </a> 
         </header>
         <section id="login-form-section">
@@ -51,10 +51,13 @@
                         <input type="password" name="password" id="password" placeholder="Password" required/>
                         <p id="errorPassword">Your password must contain between 4 and 60 characters.</p>
 
-                        <button type="submit" class="button submitButton" id="signInButton" disabled="disabled">
-                            <a style="text-decoration: none; color: white;" href="/user_dashboard/browse.html">Sign In</a>
-                        </button>
+                        <button type="button" class="button submitButton" id="signInButton">Sign In</button>
 
+                        <script>
+                            document.getElementById('signInButton').addEventListener('click', function() {
+                                window.location.href = '/user_dashboard/browse.html';
+                            });
+                        </script>                        
                         <div class="rememberMe">
                             <input type="checkbox" name="rememberMe" id="rememberMe" class="rememberMe">
                             <label for="rememberMe"><span class="login-remember-me-label-text">Remember me</span></label>
@@ -98,3 +101,4 @@ document.getElementById("signInButton")?.addEventListener("click", function(e){
 </body>
 
 </html>
+
