--- a/login.html
+++ b/login.html
@@ -12,10 +12,11 @@
     <title>Netflix login – Watch TV Shows Online, Watch Movies Online | do not enter you any of the information</title>
     <meta name="description" content="This is a frontend only clone of netflix - Watch Netflix movies & TV shows online or stream right to your smart TV, game console, PC, Mac, mobile, tablet and more.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="user_dashboard/favicon-32x32.png" type="image/x-icon">
+    <link rel="icon" href="user_dashboard/favicon.ico" type="image/png">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/landing-pages.css">
-    <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/png">
+
 </head>
 
 <body>
