--- a/user_dashboard/search.html
+++ b/user_dashboard/search.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <button class="button service">Service Code</button>
-                <p class="copyright">@copyright 2020 Vanilacodes, Inc.</p>
+                <p class="copyright">@copyright 2024 sct, Inc.</p>
             </div>
 
 
