--- a/user_dashboard/user-profile/home.html
+++ b/user_dashboard/user-profile/home.html
@@ -63,14 +63,6 @@
                         <img src="../../images/icons/user1.png" alt="user profile icon" class="user-icon">
                         <span>You have new notification from <span>User 123</span></span>
                     </a>
-                    <a href="#" class="profile-item d-flex flex-middle">
-                        <img src="../../images/icons/user4.png" alt="user profile icon" class="user-icon">
-                        <span>You have new notification from <span>User 123</span></span>
-                    </a>
-                    <a href="#" class="profile-item d-flex flex-middle">
-                        <img src="../../images/icons/user3.png" alt="user profile icon" class="user-icon">
-                        <span>You have new notification from <span>User 123</span></span>
-                    </a>
                 </div>
             </div>
                 
@@ -131,7 +123,7 @@
                 <div class="right">
                     <div class="d-flex space-between">
                         <div class="email">
-                            <strong>rajesh1234@gmail.com</strong>
+                            <strong>sct10@gmail.com</strong>
                         </div>
                         <div class="link">
                             <a href="#" class="link-item">
@@ -142,7 +134,7 @@
 
                     <div class="d-flex space-between">
                         <div class="password">
-                            Password: *********
+                            Password: ***
                         </div>
                         <div class="link">
                             <a href="#" class="link-item">
@@ -153,7 +145,7 @@
 
                     <div class="d-flex space-between">
                         <div class="email">
-                            Phone: 095210 21826
+                            Phone: 0812121212
                         </div>
                         <div class="link">
                             <a href="#" class="link-item">
@@ -165,7 +157,7 @@
 
                     <div class="carddetail d-flex space-between flex-middle">
                         <div class="card">
-                            <h4><span class="icon-visa">VISA</span> •••• •••• •••• 5350</h4>
+                            <h4><span class="icon-visa">VISA</span> •••• •••• •••• 1010</h4>
                         </div>
                         <div class="link">
                             <a href="#" class="link-item">
@@ -230,7 +222,7 @@
                             <div class="name d-flex">
                                 <img src="../../images/icons/user1.png" alt="user" class="user-icon" />
                                 <div class="content">
-                                    <p class="username">Rajesh</p>
+                                    <p class="username">mhmdnazmi</p>
                                     <p class="maturity">All Maturity Rating</p>
                                 </div>
                             </div>
@@ -249,7 +241,7 @@
                             <div class="name d-flex">
                                 <img src="../../images/icons/user2.png" alt="user" class="user-icon" />
                                 <div class="content">
-                                    <p class="username">Rajesh</p>
+                                    <p class="username">nadinee</p>
                                     <p class="maturity">All Maturity Rating</p>
                                 </div>
                             </div>
@@ -268,7 +260,7 @@
                             <div class="name d-flex">
                                 <img src="../../images/icons/user3.png" alt="user" class="user-icon" />
                                 <div class="content">
-                                    <p class="username">Rajesh</p>
+                                    <p class="username">evaa</p>
                                     <p class="maturity">All Maturity Rating</p>
                                 </div>
                             </div>
@@ -323,7 +315,7 @@
                     </div>
                 </div>
                 <button class="button service">Service Code</button>
-                <p class="copyright">@copyright 2020 Vanilacodes, Inc.</p>
+                <p class="copyright">@copyright 2024 sct, Inc.</p>
             </div>
 
 
